--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -46,10 +46,14 @@ div.command {
     flex-flow: column;
   }
 
-  button {
-    align-self: center;
-    padding: 0.5em 1em;
-    cursor: pointer;
-    width: 8em;
+  div.buttons {
+    display: flex;
+    justify-content: space-between;
+    button {
+      align-self: center;
+      padding: 0.5em 1em;
+      cursor: pointer;
+      width: 8em;
+    }
   }
 }
